examples/kju/positive/assignment_of_sum.kju
fun kju():Unit{
    var x:Int;
    x = 1 + 2;
}
