examples/kju/negative/semicolons/semicolon_misplaced.kju
fun kju():Unit{
	  var whatisthis : Int; = 20;
}
